[gd_scene format=3 uid="uid://607u2kvxyogs"]

[ext_resource type="Script" path="res://scripts/ui/level_complete.gd" id="1"]

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -330.0
offset_right = 380.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CompleteLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 56
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 28
text = ""
horizontal_alignment = 1

[node name="PerfectClearLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 24
text = "PERFECT CLEAR! (2x Score Bonus)"
horizontal_alignment = 1
visible = false

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="BreakdownContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="BreakdownTitleLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "SCORE BREAKDOWN"
horizontal_alignment = 1

[node name="BaseScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Base Score: 0"
horizontal_alignment = 1

[node name="DifficultyBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Difficulty Bonus: +0"
horizontal_alignment = 1

[node name="ComboBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Combo Bonus: +0"
horizontal_alignment = 1

[node name="StreakBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Streak Bonus: +0"
horizontal_alignment = 1

[node name="DoubleBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Power-Up Bonus: +0"
horizontal_alignment = 1

[node name="PerfectBonusLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Perfect Clear Bonus: +0"
horizontal_alignment = 1

[node name="TotalScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Total: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Time: 00:00"
horizontal_alignment = 1

[node name="SetTotalLabel" type="Label" parent="VBoxContainer/HBoxContainer/BreakdownContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Set Total: 0"
horizontal_alignment = 1
visible = false

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="UnlockedLabel" type="Label" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = ""
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 28
text = "PLAY AGAIN"

[node name="NextLevelButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 32
text = "NEXT LEVEL"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 28
text = "LEVEL SELECT"

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
